add possibility to receive as base64 or binary
